--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -11,8 +11,11 @@ env:
 
 jobs:
   build:
-    name: Build and test the latest commit
-    runs-on: [ubuntu-latest, windows-latest, macOS-latest]
+    name: Build and test on ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
 
     steps:
     - uses: actions/checkout@v2
