--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,36 +10,20 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  ubuntu-build:
-    name: Build and test on ubuntu-latest
+  build:
+    name: Build and test on ${{ matrix.os }}
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
 
     steps:
     - uses: actions/checkout@v2
+    - name: Setup Ninja
+      uses: ashutoshvarma/setup-ninja@master
     - name: Install dependencies
-      run: sudo apt-get install libudev-dev
-    - name: Build
-      run: cargo build --verbose
-    - name: Run tests
-      run: cargo test --verbose
-
-  windows-build:
-    name: Build and test on windows-latest
-    runs-on: windows-latest
-    
-    steps:
-    - uses: actions/checkout@v2
-    - name: Build
-      run: cargo build --verbose
-    - name: Run tests
-      run: cargo test --verbose
-
-  macos-build:
-    name: Build and test on macos-latest
-    runs-on: macos-latest
-    
-    steps:
-    - uses: actions/checkout@v2
+      if: matrix.os == 'ubuntu-latest'
+      run: sudo apt-get update && sudo apt-get install libudev-dev
     - name: Build
       run: cargo build --verbose
     - name: Run tests
