--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -21,6 +21,9 @@ jobs:
     - uses: actions/checkout@v2
     - name: Setup Ninja
       uses: ashutoshvarma/setup-ninja@master
+    - name: Check Ninja installation
+      if: matrix.os == 'windows-latest'
+      run: echo %PATH%
     - name: Install dependencies
       if: matrix.os == 'ubuntu-latest'
       run: sudo apt-get update && sudo apt-get install libudev-dev libasound2-dev
