--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -19,12 +19,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Setup Ninja
-      uses: ashutoshvarma/setup-ninja@master
-    - name: Check Ninja installation
+    - name: Install dependencies for Windows
       if: matrix.os == 'windows-latest'
-      run: echo %PATH%
-    - name: Install dependencies
+      uses: crazy-max/ghaction-chocolatey@v1
+      with:
+        args: install ninja
+    - name: Install dependencies for Ubuntu
       if: matrix.os == 'ubuntu-latest'
       run: sudo apt-get update && sudo apt-get install libudev-dev libasound2-dev
     - name: Build
