--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -11,7 +11,7 @@ env:
 
 jobs:
   build:
-    name: Build and test on ${{ matrix.os }}
+    name: ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -19,6 +19,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - uses: actions/cache@v2
+      with:
+        path: |
+          ~/.cargo/registry
+          ~/.cargo/git
+          target
+        key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
     - name: Install dependencies for Windows
       if: matrix.os == 'windows-latest'
       uses: crazy-max/ghaction-chocolatey@v1
@@ -27,7 +34,16 @@ jobs:
     - name: Install dependencies for Ubuntu
       if: matrix.os == 'ubuntu-latest'
       run: sudo apt-get update && sudo apt-get install libudev-dev libasound2-dev
+    - uses: actions-rs/toolchain@v1
+      with:
+        toolchain: nightly
     - name: Build
-      run: cargo build --verbose
+      run: cargo build --verbose -Z unstable-options --out-dir artifacts
     - name: Run tests
       run: cargo test --verbose
+    - name: Upload artifacts
+      uses: actions/upload-artifact@v2
+      if: success()
+      with:
+        path: ${{ github.workspace }}/artifacts
+        name: ${{ matrix.os }}-${{ github.run_number }}
