--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -34,9 +34,11 @@ jobs:
     - name: Install dependencies for Ubuntu
       if: matrix.os == 'ubuntu-latest'
       run: sudo apt-get update && sudo apt-get install libudev-dev libasound2-dev
-    - uses: actions-rs/toolchain@v1
+    - name: Install latest nightly toolchain
+      uses: actions-rs/toolchain@v1
       with:
         toolchain: nightly
+        override: true
     - name: Build
       run: cargo build --verbose -Z unstable-options --out-dir artifacts
     - name: Run tests
