--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest, windows-latest] # Remove macOS support temporarily due to https://github.com/actions/upload-artifact/issues/76
 
     steps:
     - uses: actions/checkout@v2
@@ -43,12 +43,8 @@ jobs:
       run: cargo build --verbose -Z unstable-options --out-dir artifacts
     - name: Run tests
       run: cargo test --verbose
-    - name: Zip artifacts
-      uses: montudor/action-zip@v0.1.0
-      with:
-        args: zip -qq r ${{ github.workspace }}/artifacts.zip ${{ github.workspace }}/artifacts
     - name: Upload artifacts
       uses: actions/upload-artifact@v2
       with:
-        path: ${{ github.workspace }}/artifacts.zip
+        path: ${{ github.workspace }}/artifacts
         name: ${{ matrix.os }}-${{ github.run_number }}
